--- a/javascript_assignment_2.html
+++ b/javascript_assignment_2.html
@@ -1,21 +1,25 @@
 <html>
     <body>
         <h3>Today Fruits</h3>
-        <ul id="fruit-list"></ul>
-        <hr>
+        <ul id="fruit-list">
+            <li>Apple</li>
+            <li>Banana</li>
+            <li>Orange</li>
+            <li>Mango</li>
+            <li>Strawberry</li>
+        </ul>
+        <hr/>
         <h3>Today Vegetables</h3>
-        <ul id="veg-list"></ul>
-<script>
-            const fruits = ["Apple", "Banana", "Orange", "Mango", "Strawberry"];
-            const vegetables = ["Carrot", "Broccoli", "Spinach", "Tomato", "Cucumber"];
- 
-            for (let i = 0; i < fruits.length; i++) {
-                document.getElementById("fruit-list").innerHTML += `<li>${fruits[i]}</li>`;
-            }
- 
-            for (let j = 0; j < vegetables.length; j++) {
-                document.getElementById("veg-list").innerHTML += `<li>${vegetables[j]}</li>`;
-            }
+        <ul id="veg-list">
+            <li>Carrot</li>
+            <li>Broccoli</li>
+            <li>Spinach</li>
+            <li>Potato</li>
+            <li>Cucumber</li>
+        </ul>
+        <script>
+            const fruitItems = document.querySelectorAll('#fruit-list li');
+            const vegItems = document.querySelectorAll('#veg-list li');
         </script>
     </body>
 </html>
